# chat

./: Cargo.toml  README.md  cliff.toml  deny.toml
.github/workflows/: build.yml
chat-core/: Cargo.toml
chat-core/fixtures/: test.sql
chat-core/src/: lib.rs
chat-core/src/middlewares/: auth.rs  mod.rs  request_id.rs
chat-core/src/utils/: jwt.rs
chat-server/: Cargo.toml  app.yml  test.rest
chat-server/fixtures/: encoding.pem  test.sql
chat-server/src/: config.rs  error.rs  lib.rs  main.rs  openapi.rs
chat-server/src/handlers/: auth.rs  chat.rs  message.rs  mod.rs  workspace.rs
chat-server/src/middlewares/: auth.rs  chat.rs  mod.rs  server_time.rs
chat-server/src/models/: chat.rs  file.rs  message.rs  mod.rs  user.rs  workspace.rs
chat-server/src/utils/: jwt.rs
chat-test/: Cargo.toml  chat.yml  notify.yml
chat-test/fixtures/: decoding.pem
chat-test/tests/: chat.rs
fixme/: RUSTSEC-2023-0071.md
migrations/: 20260425110608_initial.sql  20260429063451_workspace.sql  20260430130922_triggers.sql
notify-server/: Cargo.toml  index.html
notify-server/src/: config.rs  error.rs  lib.rs  main.rs  notify.rs  sse.rs
src/: config.rs  lib.rs  main.rs
src/handlers/: auth.rs  chat.rs  message.rs
