
[workspace]
resolver = "3"
members = ["chat-server", "notify-server"]
[workspace.dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["http2", "multipart", "query", "tracing"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls"] }
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
