
[workspace]
resolver = "3"
members = ["chat-server", "chat-core", "notify-server"]
[workspace.dependencies]
chat-core = { path = "./chat-core" }
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["http2", "multipart", "query", "tracing"] }
axum-extra = { version = "0.12.6", features = ["typed-header"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
chrono = { version = "0.4.44", features = ["serde"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["compression-full", "trace"] }
jwt-simple = "0.12.15"
