[package]
name = "chat-core"
version = "0.1.0"
edition = "2024"
license = "MIT"
[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
anyhow = { workspace = true }
jwt-simple = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1.23.1", features = ["v7", "serde"] }
