[package]
name = "chat-server"
version = "0.1.1"
edition = "2024"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = { workspace = true }
argon2 = { version = "0.5.3", features = ["std"] }
axum = { workspace = true }
axum-extra = { version = "0.12.6", features = ["typed-header"] }
chrono = { version = "0.4.44", features = ["serde"] }
hex = "0.4.3"
jwt-simple = "0.12.15"
mime_guess = "2.0.5"
serde = { workspace = true }
serde_json = "1.0.149"
serde_yaml = { workspace = true }
sha1 = "0.11.0"
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["compression-full", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { version = "1.23.1", features = ["v7", "serde"] }

[dev-dependencies]
http-body-util = "0.1.3"
sqlx-db-tester = "0.7.1"

[package.metadata.release]
# Message for the commit that prepares the package version
pre-release-commit-message = "chore(version): prepare version v{{version}}"

# Description/Annotation message for the Git tag being created
tag-message = "chore(version): prepare version v{{version}}"
