[package]
name = "chat-server"
version = "0.1.1"
edition = "2024"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
test-util = ["http-body-util", "sqlx-db-tester"]

[dependencies]
chat-core = { workspace = true }
anyhow = { workspace = true }
argon2 = { version = "0.5.3", features = ["std"] }
axum = { workspace = true }
axum-extra = {workspace = true}
http-body-util = { version = "0.1.3", optional = true}
chrono = { version = "0.4.44", features = ["serde"] }
hex = "0.4.3"
mime_guess = "2.0.5"
serde = { workspace = true }
serde_json = "1.0.149"
serde_yaml = { workspace = true }
sha1 = "0.11.0"
sqlx = { workspace = true }
sqlx-db-tester = { version = "0.7.1", optional = true}
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
jwt-simple = { workspace = true }
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
utoipa-axum = { version = "0.2.0" }

[dev-dependencies]
chat-server = { workspace = true,features = ["test-util"] }


[package.metadata.release]
# Message for the commit that prepares the package version
pre-release-commit-message = "chore(version): prepare version v{{version}}"

# Description/Annotation message for the Git tag being created
tag-message = "chore(version): prepare version v{{version}}"
