[package]
name = "notify-server"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
axum-extra = { version = "0.12.6", features = ["typed-header"] }
futures-util = "0.3.32"
serde = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { version = "0.1.18" ,features = ["sync"]}
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chat-core = { workspace = true }
jwt-simple = { workspace = true }
dashmap = "6.1.0"
serde_json.workspace = true
async-stream = "0.3.6"
